# cdc-mcp

./: .gitignore  .mcp.json.example  AUTHENTICATION_SUCCESS.md  AUTHENTICATION_TESTING.md  CHANGELOG.md  COVERAGE_REPORT.md  DISEASE_COVERAGE.md  EXPANSION_COMPLETE.md  EXPANSION_PLAN.md  EXPANSION_SUMMARY.md  INTEGRATION.md  LICENSE  MISSING_DATASETS.md  PHASE4_CRITICAL_GAPS.md  README.md  TIER1_EXPANSION_SUMMARY.md  TIER2_EXPANSION_SUMMARY.md  package-lock.json  package.json  pyproject.toml  requirements.txt  test_app_token_only.py  test_auth_datasets.py  test_auth_simple.py  test_cdc_client.py  test_new_credentials.py  test_tier2_datasets.py  test_tier3_datasets.py  tsconfig.json
documentation/: DATASET_CATALOG.md  NEW_DATASETS_DISCOVERED.md
documentation/archive/: COVERAGE_COMPARISON.md  EXPANSION_ANALYSIS.md  TIER3_EXPANSION_SUMMARY.md
examples/: usage_examples.py
src/: cdc-client.ts  constants.ts  index.ts  types.ts
src/cdc_mcp/: __init__.py  cdc_client.py  server.py
