[project]
name = "cdc-mcp-server"
version = "0.1.0"
description = "An MCP server for accessing CDC public health data including PLACES, BRFSS, and chronic disease indicators"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "cdc", "public-health", "epidemiology", "disease-prevalence", "brfss", "places"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.4.1",
    "requests>=2.25.1",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/uh-joan/cdc-mcp-server"
Documentation = "https://github.com/uh-joan/cdc-mcp-server#readme"
Repository = "https://github.com/uh-joan/cdc-mcp-server"
"Bug Tracker" = "https://github.com/uh-joan/cdc-mcp-server/issues"

[project.scripts]
cdc-mcp-server = "cdc_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cdc_mcp"]
